# smart_library_system

./: .gitignore  CMakeLists.txt  README.md  admin_class.cpp.cpp  admin_class.h  run.sh  student class.cpp
data/: studentsalhelali.json
data/admins/: README.md  munaibsadeq.json
data/books/: README.md
data/login_info/: Ashraf.json  README.md  munaib.json  munaibsadeq.json
data/shelves/: README.md
data/students/: README.md  alhelali.json  ashraf123.json
include/smart_library_system/: admin.hpp  admin_driver.hpp  book.hpp  database.hpp  extra_functions.hpp  login.hpp  login_data.hpp  shelf.hpp  student.hpp  student_view.hpp
src/: admin  admin.cpp  admin.h  admin_class.cpp  admin_class.h  admin_driver.cpp  admin_driver.h  adminedriver.cpp  adminedriver.h  book.cpp  book.h  database.cpp  database.h  driver  driver_program.cpp  extra_functions.cpp  extra_functions.h  login.cpp  login.h  login_data  login_data.cpp  login_data.h  main.cpp  shelf.cpp  shelf.h  student class.cpp  student.cpp  student.h  student_view.cpp  testing  testing.cpp
src1/: admin.cpp  admin_driver.cpp  book  book.cpp  database  database.cpp  database.h  driver  extra_functions.cpp  login  login.cpp  login.h  shelf  shelf.h  student  student.h  student_view.h
src1/jsoncons/: json.hpp
